style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
:root {
    --blue: #4385a9;
}

* {
    margin: 0; 
    padding: 0;
    box-sizing: border-box;
    outline: none;
    border: none;
    text-decoration: none;
    text-transform: capitalize;
    transition: .2s linear;
}

html{
    font-size: 62.5%;
    scroll-behavior: smooth;
    scroll-padding-top: 6rem;
    overflow-x: hidden;
}

label{
    position: absolute;
    width: 45px;
    height: 22px;
    right: 20px;
    top: 20px;
    border: 2px solid;
    border-radius: 20px;
}
label:before{
    position: absolute;
    content: '';
    width:20px;
    height: 20px;
    border-radius: 50%;
    background: #000;
    cursor: pointer;
    transition: 0.4s;
}
label.active:before{
    left: 24px;
    background: #fff;
}

body.night{
    background: #000;
    color: #fff;
}
body.night .icons-container{
    background: #101010;
    color: #fff;
}

body.night .bg-boz{
    background: #101010;
    color: #fff;
}

body.night header{
    background: #101010;
    color: #fff;
}
body.night header a{
    color: #101010;
    color: #fff;
}

section{
    padding: 2rem 9%;
}

.heading{
    text-align: center;
    font-size: 4rem;
    color: #333;
    padding: 1rem;
    margin: 2rem 0;
    background: rgba(255,51,153,0.05);
}

.heading span{
    color: var(--blue);
}

.btn{
    display: inline-block;
    margin-top: 1rem;
    border-radius: 5rem;
    background: #333;
    color: #fff;
    padding: 0.9rem 3.5rem;
    cursor: pointer;
    font-size: 1.7rem;
}

.btn:hover{
    background: var(--blue);
}

header{
        position: fixed;
        top: 0; left: 0; right: 0;
        width: 100%;
        background: rgba(243, 239, 239, 0.8);
        padding: 1rem;
        display: flex;
        align-items: center;
        justify-content: space-between;
        z-index: 1100;
}


.logo
{
    height:50px;
    margin-left:20px;
}
.logo img
{
    width: 100%;
    height: 100%;
    border:none;
}


.dark-btn-navbar{
   padding-left: 6em;
   margin-bottom: 5em;
}

header .navbar a{
    font-size: 2rem;
    padding: 0 1.5rem;
    color: #282727;
}

.navbar a {
    color: black;
    text-decoration: none;
    padding: 5px 18px;
    font-size: 1.6rem;
    transition: color 0.3s ease, background-color 0.3s ease;
}

.navbar a:hover {
    color: var(--blue);
    background-color: rgba(0, 0, 0, 0.1);
    border-radius: 5px;

}

header #toggler{
    display: none;
}

header .fa-bars{
    font-size: 20px;
    color:#333;
    border-radius: .5rem;
    padding: .5rem 1.5rem;
    cursor: pointer;
    border: .1rem solid rgba(0,0,0,0.3);
    display: none;
}

.home{
    /* display: flex; */
    /* align-items: center; */
    min-height: 100vh;
    /* background: url(img/bg-home.png)no-repeat; */
    /* background-size: cover; */
    /* background-position: center; */
    padding: 0;
}

.home .content{
    max-width: 50rem;
    position: absolute;
    z-index: 1;
    top: 50%;
    transform: translateY(-50%);
    left: 10%;
}

.home .content h3{
    font-size: 5rem;
    color: #ffffff;
    font-weight: bold;
    text-shadow: 0 0 4px #ffffff;
}

.home .content span{
    font-size: 3.5rem;
    color: #a7e0ff;
    padding: 1rem 0;
    line-height: 1.5;
}

.home .content p{
    font-size: 1.5rem;
    color: #ffffff;
    padding: 1rem 0;
    line-height: 1.5;
}

.about .row{
    display: flex;
    align-items: center;
    gap: 2rem;
    flex-wrap: wrap;
    padding: 2rem 0;
    padding-bottom: 3rem;
}

.about .row .video-container{
    flex: 1 1 40rem;
    position: relative;
}

.about .row .video-container video{
    width: 100%;
    border: 1.5rem solid #fffefe;
    border-radius: 0.5rem;
    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.1);
    height: 100%;
    object-fit: cover;
}

.about .row .video-container h3{
    position: absolute;
    top: 50%; transform: translateY(-50%);
    font-size: 3rem;
    background: #fff;
    width: 100%;
    padding: 1rem 2rem;
    text-align: center;
    mix-blend-mode: screen;
}

.about .row .content{
    flex:1 1 40rem;
}

.about .row .content h3{
    font-size: 3rem;
    color: #333;
}

.about .row .content p{
    font-size: 1.5rem;
    color: #999;
    padding: 0.5rem 0;
    padding-top: 1rem;
    line-height: 1.5;
}

.icons-container{
    background: #eee;
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    padding-top: 5rem;
    padding-bottom: 5rem;
}

.icons-container .icons{
    background: #fff;
    border: 0.1rem solid rgba(0,0,0,0.1);
    padding: 2rem;
    display: flex;
    align-items: center;
    flex: 1 1 25rem;
}

.icons-container .icons h3{
    color: #333;
    padding-bottom: 0.5rem;
    font-size: 1.5rem;
}

.icons-container .icons span{
    color: #555;
    font-size: 1.3rem;
}

ul{
    font-size: 18px;
    font-weight: 600;
    gap: 20px;
    margin-left: 20px;
}
ul li .nav-link:hover{
    background: var(--blue);
    color: white;
    border-radius: 30px;
    transition: all 0.5s;
}
.card-body{
    position: relative;
    max-width: 7;
    font-size: 25px;
    text-align: center;
}

.circle{
    position: absolute;
    background-color: var(--blue);
    height: 370px;
    width: 370px;
    top: -20px;
    left: 50px;
    border-radius: 50%;
    opacity: 0.8;  
}
.hero{
    position: relative;
    z-index: 1;
}

.py-5 .card-body .card-title{
    font-size: 30px;
}
.py-5 .card-body .card-subtitle{
    font-size: 60px;
}
.bg-mavi {
    background-color: var(--blue)
}

.bg-goy {
    background-color: #072035;
}

.bg-boz {
    background-color: #f1f1f1
}

.text-mavi {
    color: var(--blue)
}

.vh-50 {
    min-height: 50vh;
}

.features:hover {
    opacity: .5;
}

.serviceimgs {
    width: 98%;
    height: 98%;
    border: 2px solid #97aac3;
    border-radius: 20%;
}

.carousel-caption,
.carousel-item {
    height: 200px;
}

#bottom-carousel .carousel-indicators button {
    width: 45px !important;
    height: 45px !important;
    border-radius: 50%;
}

#bottom-carousel .carousel-indicators button.active {
    width: 50px !important;
    height: 50px !important;
}

.carousel-inner h6 {
    text-transform: uppercase;
    letter-spacing: .1rem;
}

.carousel-inner p {
    text-transform: uppercase;
    color: rgba(255, 255, 255, 0.7);
}

footer p {
    opacity: 0.7;
    font-size: 1.5rem;
    line-height: 30px;
    color: #fff;
    font-weight: 400;
}

footer h5 {
    margin-top: 40px;
    font-size: 2rem;
    color: #fff;
    font-weight: 400;
    font-family: "Roboto";

}

.bt1 {
    background: url("img/feature-1.jpg") center/cover;
}

.bt2 {
    background: url("img/feature-2.jpg") center/cover;
}

.bt3 {
    background: url("img/feature-3.jpg") center/cover;
}

.bt4 {
    background: url("img/feature-4.jpg") center/cover;
}

.bt5 {
    background: url("img/feature-5.jpg") center/cover;
}



/*--------------------------------------------------------------
# Services
--------------------------------------------------------------*/

section {
    padding: 60px 0;
    overflow: hidden;
}

.section-title {
    text-align: center;
    padding-bottom: 30px;
  }
  
  .section-title h2 {
    font-size: 32px;
    font-weight: bold;
    margin-bottom: 20px;
    padding-bottom: 20px;
    position: relative;
    color: #2c4964;
  }
  
  .section-title h2::before {
    content: "";
    position: absolute;
    display: block;
    width: 120px;
    height: 1px;
    background: #ddd;
    bottom: 1px;
    left: calc(50% - 60px);
  }
  
  .section-title h2::after {
    content: "";
    position: absolute;
    display: block;
    width: 40px;
    height: 3px;
    background: #1977cc;
    bottom: 0;
    left: calc(50% - 20px);
  }
  
  .section-title p {
    margin-bottom: 0;
  }

.services .icon-box {
    text-align: center;
    background: linear-gradient(106deg,#858383,#ffffff);
    border: none;
    padding: 20px 20px 20px 20px;
    transition: all ease-in-out 0.5s;
    width: 95%;
    border-radius: 4%;
  }
  
  .services .icon-box .icon {
    margin: 0 auto;
    width: 140px;
    height: 140px;
    background: #ffffff;
    border-radius: 20%;
    transition: all 0.3s ease-out 0s;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 20px;
    transform-style: preserve-3d;
  }
  
  .services .icon-box .icon i {
    color: #fff;
    font-size: 28px;
  }
  
  .services .icon-box .icon::before {
    position: absolute;
    content: "";
    left: -8px;
    top: -8px;
    height: 100%;
    width: 100%;
    background: #badaf7;
    border-radius: 20%;
    transition: all 0.3s ease-out 0s;
    transform: translateZ(-1px);
  }
  
  .services .icon-box h4 {
    font-weight: 700;
    margin-bottom: 15px;
    font-size: 24px;
  }
  
  .services .icon-box h4 a {
    color: #4b4d4f;
  }
  
  .services .icon-box p {
    line-height: 24px;
    font-size: 18px;
    margin-bottom: 0;
  }
  
  .services .icon-box:hover {
    background: #b9cee1;
    border-color: #7b7b7b;
    transform: scale(1.05);
  }
  
  .services .icon-box:hover .icon {
    background: #fff;
  }
  
  .services .icon-box:hover .icon i {
    color: #1977cc;
  }
  
  .services .icon-box:hover .icon::before {
    background: #3291e6;
  }
  
  .services .icon-box:hover h4 a,
  .services .icon-box:hover p {
    color: #fff;
  }
  






/* media queries */
@media (max-width:991px){

    html{
        font-size: 55%;
    }

    header{
        padding: 2rem;
    }

    section{
        padding: 2rem;
    }

    .home{
        background-position: left;
    }
    
}

input[type="text"], input[type="email"], textarea {
    width: 100%; /* Adjust the width */
    height: 50px; /* Adjust the height */
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 1.6rem;
}

/* Adjust the textarea height specifically */
textarea {
    height: 150px; /* Increase height for a larger textarea */
}

@media (max-width:768px){

    html .fa-bars{
        display: block;
    }

    header .navbar{
        position: absolute;
        top: 100%; left: 0; right: 0;
        background: #eee;
        border-top: 0.1rem solid rgba(0,0,0,0.1);
        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
    }

    header #toggler:checked ~ .navbar{
        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
    }

    header .navbar a{
        margin: 1.5rem;
        padding: 1.5rem;
        background: #fff;
        border: 0.1rem solid rgba(0,0,0,0.1);
        display: block;
    }

    .home .content h3{
        font-size: 5rem;
    }

    .home .content span{
        font-size: 2.5rem;
    }

    .icons-container .icons h3{
        font-size: 2rem;
    }
    
    .icons-container .icons span{
        font-size: 1.7rem;
    }
     

}

@media (max-width:450px){

    html{
        font-size: 50%;
    }

    .heading{
        font-size: 3rem;
    }
    
}

#gallery .image-container {
    overflow: hidden;
}

#gallery .image-container img {
    transition: transform .5s ease;
    border: none;
}

#gallery .image-container:hover img {
    transform: scale(1.5);
}

